# ssstr

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  .gitmodules.license  .pre-commit-config.yaml  LICENSE.txt  README.md  SsstrConfig.cmake.in  bench_ss8str.cpp  index.html  meson.build  meson_options.txt  ss8str.h  test_ss8str.c  test_ss8str_include.cpp
.github/workflows/: ci.yml
examples/: meson.build  test_example_fgets.c  test_example_fread.c  test_example_strftime.c
include/: ss8str.h
man/: meson.build
man/link3/: ss8_back.3  ss8_cat_ch.3  ss8_cat_cstr.3  ss8_cat_vsprintf.3  ss8_cmp_ch.3  ss8_cmp_cstr.3  ss8_contains_bytes.3  ss8_contains_ch.3  ss8_contains_cstr.3  ss8_copy_bytes.3  ss8_copy_ch_n.3  ss8_copy_to_bytes.3  ss8_cstr_suffix.3  ss8_destroy.3  ss8_ends_with_ch.3  ss8_equals_bytes.3  ss8_equals_ch.3  ss8_find_bytes.3  ss8_find_first_not_of_bytes.3  ss8_find_last_of.3  ss8_find_last_of_bytes.3  ss8_init_copy_bytes.3  ss8_init_copy_ch_n.3  ss8_init_copy_cstr.3  ss8_init_move_destroy.3  ss8_insert_ch.3  ss8_insert_cstr.3  ss8_is_empty.3  ss8_lstrip_bytes.3  ss8_lstrip_ch.3  ss8_move_destroy.3  ss8_mutable_cstr.3  ss8_mutable_cstr_suffix.3  ss8_replace_bytes.3  ss8_replace_ch.3  ss8_replace_ch_n.3  ss8_reserve.3  ss8_rfind_cstr.3  ss8_rstrip.3  ss8_set_front.3  (+6 more)
man/link7/: ss8str.7
man/man3/: ss8_at.3  ss8_capacity.3  ss8_cat.3  ss8_clear.3  ss8_cmp.3  ss8_contains.3  ss8_copy.3  ss8_copy_substr.3  ss8_copy_to_cstr.3  ss8_cstr.3  ss8_equals.3  ss8_erase.3  ss8_find.3  ss8_find_first_of.3  ss8_init.3  ss8_init_copy.3  ss8_init_move.3  ss8_insert.3  ss8_len.3  ss8_move.3  ss8_replace.3  ss8_set_len.3  ss8_sprintf.3  ss8_starts_with.3  ss8_strip.3  ss8_swap.3
man/man7/: ssstr.7
man3/: ss8_at.3.html  ss8_back.3.html  ss8_capacity.3.html  ss8_cat.3.html  ss8_cat_bytes.3.html  ss8_cat_ch.3.html  ss8_cat_ch_n.3.html  ss8_cat_cstr.3.html  ss8_cat_snprintf.3.html  ss8_cat_sprintf.3.html  ss8_cat_vsnprintf.3.html  ss8_cat_vsprintf.3.html  ss8_clear.3.html  ss8_cmp.3.html  ss8_cmp_bytes.3.html  ss8_cmp_ch.3.html  ss8_cmp_cstr.3.html  ss8_const_cstr.3.html  ss8_const_cstr_suffix.3.html  ss8_contains.3.html  ss8_contains_bytes.3.html  ss8_contains_ch.3.html  ss8_contains_cstr.3.html  ss8_copy.3.html  ss8_copy_bytes.3.html  ss8_copy_ch.3.html  ss8_copy_ch_n.3.html  ss8_copy_cstr.3.html  ss8_copy_substr.3.html  ss8_copy_to_bytes.3.html  ss8_copy_to_cstr.3.html  ss8_cstr.3.html  ss8_cstr_suffix.3.html  ss8_destroy.3.html  ss8_ends_with.3.html  ss8_ends_with_bytes.3.html  ss8_ends_with_ch.3.html  ss8_ends_with_cstr.3.html  ss8_equals.3.html  ss8_equals_bytes.3.html  (+78 more)
man7/: ss8str.7.html  ssstr.7.html
scripts/: checkmanpages.py  checkreadme.py  checkversion.py  htmlman.py  pyproject.toml  ruff.toml
subprojects/: .gitignore  unity.wrap.license
tests/: bench_ss8str.cpp  meson.build  test_ss8str.c  test_ss8str_assertions.c  test_ss8str_include.cpp
