# This file is part of the Ssstr string library.
# Copyright 2022-2023 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

option('docs', type: 'feature', value: 'disabled')
option('test', type: 'feature', value: 'auto')
option('benchmark', type: 'feature', value: 'disabled')
