# This file is part of the Ssstr string library.
# Copyright 2022 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

man3_pages = files(
    'man3/ss8_at.3',
    'man3/ss8_capacity.3',
    'man3/ss8_cat.3',
    'man3/ss8_clear.3',
    'man3/ss8_cmp.3',
    'man3/ss8_contains.3',
    'man3/ss8_copy.3',
    'man3/ss8_copy_substr.3',
    'man3/ss8_copy_to_cstr.3',
    'man3/ss8_cstr.3',
    'man3/ss8_equals.3',
    'man3/ss8_erase.3',
    'man3/ss8_find.3',
    'man3/ss8_find_first_of.3',
    'man3/ss8_init.3',
    'man3/ss8_init_copy.3',
    'man3/ss8_init_move.3',
    'man3/ss8_insert.3',
    'man3/ss8_len.3',
    'man3/ss8_move.3',
    'man3/ss8_replace.3',
    'man3/ss8_set_len.3',
    'man3/ss8_sprintf.3',
    'man3/ss8_starts_with.3',
    'man3/ss8_strip.3',
    'man3/ss8_swap.3',
)

man3_links = files(
    'link3/ss8_back.3',
    'link3/ss8_cat_bytes.3',
    'link3/ss8_cat_ch.3',
    'link3/ss8_cat_ch_n.3',
    'link3/ss8_cat_cstr.3',
    'link3/ss8_cat_snprintf.3',
    'link3/ss8_cat_sprintf.3',
    'link3/ss8_cat_vsnprintf.3',
    'link3/ss8_cat_vsprintf.3',
    'link3/ss8_cmp_bytes.3',
    'link3/ss8_cmp_ch.3',
    'link3/ss8_cmp_cstr.3',
    'link3/ss8_contains_bytes.3',
    'link3/ss8_contains_ch.3',
    'link3/ss8_contains_cstr.3',
    'link3/ss8_copy_bytes.3',
    'link3/ss8_copy_ch.3',
    'link3/ss8_copy_ch_n.3',
    'link3/ss8_copy_cstr.3',
    'link3/ss8_copy_to_bytes.3',
    'link3/ss8_cstr_suffix.3',
    'link3/ss8_destroy.3',
    'link3/ss8_ends_with.3',
    'link3/ss8_ends_with_bytes.3',
    'link3/ss8_ends_with_ch.3',
    'link3/ss8_ends_with_cstr.3',
    'link3/ss8_equals_bytes.3',
    'link3/ss8_equals_ch.3',
    'link3/ss8_equals_cstr.3',
    'link3/ss8_find_bytes.3',
    'link3/ss8_find_ch.3',
    'link3/ss8_find_cstr.3',
    'link3/ss8_find_first_not_of.3',
    'link3/ss8_find_first_not_of_bytes.3',
    'link3/ss8_find_first_not_of_cstr.3',
    'link3/ss8_find_first_of_bytes.3',
    'link3/ss8_find_first_of_cstr.3',
    'link3/ss8_find_last_not_of.3',
    'link3/ss8_find_last_not_of_bytes.3',
    'link3/ss8_find_last_not_of_cstr.3',
    'link3/ss8_find_last_of.3',
    'link3/ss8_find_last_of_bytes.3',
    'link3/ss8_find_last_of_cstr.3',
    'link3/ss8_find_not_ch.3',
    'link3/ss8_front.3',
    'link3/ss8_grow_len.3',
    'link3/ss8_init_copy_bytes.3',
    'link3/ss8_init_copy_ch.3',
    'link3/ss8_init_copy_ch_n.3',
    'link3/ss8_init_copy_cstr.3',
    'link3/ss8_init_move_destroy.3',
    'link3/ss8_insert_bytes.3',
    'link3/ss8_insert_ch.3',
    'link3/ss8_insert_ch_n.3',
    'link3/ss8_insert_cstr.3',
    'link3/ss8_is_empty.3',
    'link3/ss8_lstrip.3',
    'link3/ss8_lstrip_bytes.3',
    'link3/ss8_lstrip_ch.3',
    'link3/ss8_lstrip_cstr.3',
    'link3/ss8_move_destroy.3',
    'link3/ss8_mutable_cstr.3',
    'link3/ss8_mutable_cstr_suffix.3',
    'link3/ss8_replace_bytes.3',
    'link3/ss8_replace_ch.3',
    'link3/ss8_replace_ch_n.3',
    'link3/ss8_replace_cstr.3',
    'link3/ss8_reserve.3',
    'link3/ss8_rfind.3',
    'link3/ss8_rfind_bytes.3',
    'link3/ss8_rfind_ch.3',
    'link3/ss8_rfind_cstr.3',
    'link3/ss8_rfind_not_ch.3',
    'link3/ss8_rstrip.3',
    'link3/ss8_rstrip_bytes.3',
    'link3/ss8_rstrip_ch.3',
    'link3/ss8_rstrip_cstr.3',
    'link3/ss8_set_at.3',
    'link3/ss8_set_back.3',
    'link3/ss8_set_front.3',
    'link3/ss8_set_len_to_cstrlen.3',
    'link3/ss8_shrink_to_fit.3',
    'link3/ss8_snprintf.3',
    'link3/ss8_starts_with_bytes.3',
    'link3/ss8_starts_with_ch.3',
    'link3/ss8_starts_with_cstr.3',
    'link3/ss8_strip_bytes.3',
    'link3/ss8_strip_ch.3',
    'link3/ss8_strip_cstr.3',
    'link3/ss8_substr_inplace.3',
    'link3/ss8_vsnprintf.3',
    'link3/ss8_vsprintf.3',
)

man7_pages = files(
    'man7/ssstr.7',
)

man7_links = files(
    'link7/ss8str.7',
)

if not get_option('docs').disabled()
    install_man(man3_pages, man3_links, man7_pages, man7_links)
endif
